--- a/style.css
+++ b/style.css
@@ -5,16 +5,34 @@
 
 .die {
   display: flex;
-  gap: 10px;
+  gap: 40px;
 }
 
 .dice {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   background-color: green;
 }
 
 .keep {
-  margin: 20px;
+  margin-top: 20px;
+  margin-left: 1px;
   background-color: green;
+}
+
+.roll_btn {
+  padding: 5px;
+  margin: 50px;
+  background-color: red;
+}
+
+img {
+  height: 100px;
+  width: 100px;
+}
+
+.dice_combo {
+  display: flex;
+  flex-wrap: wrap;
+  width: 50px;
 }
