--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   background-color: black;
   color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 h1 {
@@ -24,11 +25,17 @@ h1 {
   margin-top: 20px;
   margin-left: 1px;
   background-color: green;
+  border-radius: 8px;
+}
+
+.hover {
+  opacity: 0.5;
 }
 
 .roll_btn {
   height: 20px;
   background-color: red;
+  border-radius: 8px;
 }
 
 .turn {
@@ -113,6 +120,7 @@ img {
   font-size: 10px;
   margin-left: 27px;
   margin-right: 27px;
+  border-radius: 8px;
 }
 .upper_btns {
   margin-top: 30px;
@@ -131,6 +139,7 @@ img {
   margin-top: 13px;
   padding: 5px;
   font-size: 10px;
+  border-radius: 8px;
 }
 .choose_btn_zero {
   display: flex;
@@ -140,6 +149,7 @@ img {
   margin-top: 13px;
   padding: 5px;
   font-size: 10px;
+  border-radius: 8px;
 }
 
 .gameboard {
