--- a/style.css
+++ b/style.css
@@ -5,25 +5,26 @@
 }
 
 h1 {
-  margin-left: 310px;
+  width: 140px;
+  margin: 0 auto;
+  margin-top: 30px;
 }
 
 .die {
   display: flex;
   gap: 40px;
-  margin-left: 170px;
+  width: 435px;
+  margin: 0 auto;
 }
 
 .dice {
   width: 50px;
   height: 50px;
-  border: red solid 1px;
-  background-color: green;
 }
 
 .keep {
+  margin: 0 auto;
   margin-top: 20px;
-  margin-left: 1px;
   background-color: green;
   border-radius: 8px;
 }
@@ -37,21 +38,31 @@ h1 {
   width: 80px;
   background-color: red;
   border-radius: 8px;
-  margin-left: 330px;
   margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 460px;
 }
 
 .turn {
-  margin-left: 310px;
+  width: 120px;
   font-size: 20px;
   margin-top: 20px;
+  margin: 0 auto;
 }
 
 .turn_over {
+  margin: 0 auto;
   margin-top: 10px;
-  margin-left: 350px;
+  width: 30px;
   font-size: 18px;
   color: white;
+}
+
+.player_scorecards {
+  display: flex;
+  gap: 300px;
+  width: 550px;
+  margin: 0 auto;
 }
 
 img {
@@ -63,6 +74,19 @@ img {
   display: flex;
   flex-wrap: wrap;
   width: 50px;
+  margin-top: 30px;
+}
+
+.middle_section {
+  width: 750px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.bottom_section {
+  width: 750px;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 .upper_section_1 {
@@ -113,12 +137,6 @@ img {
 .lower_sections {
   display: flex;
   gap: 20px;
-}
-
-.player_scorecards {
-  display: flex;
-  gap: 300px;
-  margin-left: 100px;
 }
 
 .turn_roll {
@@ -175,7 +193,8 @@ img {
 }
 
 .gameboard {
-  margin-left: 100px;
+  width: 1000px;
+  margin: 0 auto;
 }
 
 .reset_btn {
