--- a/style.css
+++ b/style.css
@@ -1,7 +1,49 @@
+/*************************************/
+/* CSS Reset */
+/*************************************/
+
+* {
+  padding: 0px;
+  margin: 0px;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+img,
+svg {
+  max-width: 100%;
+  display: block;
+}
+
+button,
+input,
+textarea,
+select {
+  font: inherit;
+}
+
+/*************************************/
+/* CSS End of Reset */
+/*************************************/
+
 * {
   background-color: black;
   color: white;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.gameboard {
+  width: 1000px;
+  margin: 0 auto;
 }
 
 h1 {
@@ -192,13 +234,13 @@ img {
   border-radius: 8px;
 }
 
-.gameboard {
-  width: 1000px;
-  margin: 0 auto;
-}
-
 .reset_btn {
   margin-left: 330px;
   background-color: yellow;
   color: black;
+}
+
+button:hover {
+  cursor: pointer;
+  border: cyan solid 1px;
 }
