--- a/style.css
+++ b/style.css
@@ -39,17 +39,19 @@ select {
   background-color: black;
   color: white;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 12px;
 }
 
 .gameboard {
-  outline: 3px solid purple;
-  width: 80%;
-  max-width: 1200px;
+  width: 800px;
   margin: 10vh auto;
+  display: grid;
+  place-items: center;
 }
 
 .game_title {
   text-align: center;
+  font-size: 40px;
 }
 
 .cell {
@@ -65,14 +67,14 @@ select {
   display: flex;
   justify-content: space-between;
   width: 60%;
-  margin-left: 20%;
   gap: 20px;
+  margin-top: 10px;
 }
 
 .dice {
   /* outline: 3px solid green; */
-  height: 60%;
-  width: 80%;
+  height: 70%;
+  width: 50%;
   margin: auto;
 }
 
@@ -86,18 +88,15 @@ select {
 /********* End Dice **********/
 
 .keep {
+  border: 1px solid transparent;
   background-color: green;
   border-radius: 8px;
-  width: 70%;
-  margin: auto;
+  width: 40%;
+  margin: 10px auto;
 }
 
 .hover {
   opacity: 0.5;
-}
-
-.turn {
-  font-size: 20px;
 }
 
 .turn_over {
@@ -106,42 +105,49 @@ select {
 }
 
 .player_scorecards {
+  width: 70%;
   display: flex;
+  justify-content: space-between;
+}
+
+.player_scorecards * {
+  margin: 5px 12%;
+  font-size: 14px;
 }
 
 /********* Upper Section **********/
 
 .upper_section_container {
-  outline: 3px solid blue;
-  width: 80%;
+  width: 70%;
   margin: auto;
   display: flex;
+  justify-content: space-between;
 }
 
 .upper_section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  height: 400px;
-  width: 300px;
-  border: red solid 1px;
+  height: 250px;
+  width: 250px;
+  width: 40%;
 }
 
 /********* Lower Section **********/
 
 .lower_section_container {
-  outline: 3px solid blue;
-  width: 80%;
+  width: 70%;
   margin: auto;
   display: flex;
+  justify-content: space-between;
 }
 
 .lower_section {
   margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  height: 400px;
-  width: 300px;
-  border: red solid 1px;
+  height: 250px;
+  width: 250px;
+  width: 40%;
 }
 
 .turn_roll {
@@ -153,25 +159,23 @@ select {
 /********* Game Buttons **********/
 
 .upper_btns {
-  margin-top: 30px;
+  margin-top: 4%;
 }
 
 .lower_btns,
 .zero_btns {
-  margin-top: 50px;
+  margin-top: 7.5%;
 }
 
 .choose_btn {
   display: flex;
   background-color: white;
   border: red solid 1px;
+  margin-top: 12.5%;
   color: black;
-  margin-top: 17px;
-  padding: 5px;
-  font-size: 10px;
-  margin-left: 27px;
-  margin-right: 27px;
+  padding: 3.5px;
   border-radius: 8px;
+  font-size: 10px;
 }
 
 .choose_btn2,
@@ -180,20 +184,25 @@ select {
   background-color: white;
   border: red solid 1px;
   color: black;
-  margin-top: 13px;
-  padding: 5px;
-  font-size: 10px;
+  margin-top: 10%;
+  padding: 3px;
   border-radius: 8px;
+  font-size: 10px;
 }
 
 .choose_btn_zero {
   background-color: red;
   border: white solid 1px;
+  margin-top: 14%;
 }
 
 .reset_btn {
   background-color: yellow;
+  border: 1px solid transparent;
   color: black;
+  padding: 5px;
+  border-radius: 10px;
+  width: 10%;
 }
 
 .roll_btn {
@@ -201,6 +210,7 @@ select {
   width: 70px;
   background-color: red;
   border-radius: 8px;
+  margin: 5px 0px;
 }
 
 button:hover {
